[metadata]
name = payload-validator
version = 0.1.2
author = cwadven
author_email = cwadven4@gmail.com
maintainer = cwadven
description = Validating payload datas for Python
long_description = file:README.rst
url = https://github.com/cwadven/payload-validator
license = MIT
keywords = django random
classifiers =
        Environment :: Web Environment
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: